--- a/gb/23/9/6/n14068090.md
+++ b/gb/23/9/6/n14068090.md
@@ -1,54 +1,52 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/19920513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/19920513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/19920513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/19920513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/19920513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/19920513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/19920513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/19920513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/19920513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/19920513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/1992513/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/1992513/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/1992513/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/1992513/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/1992513/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/1992513/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/1992513/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/1992513/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/1992513/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/1992513/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>现切水果检出“糖精” 艋舺夜市摊商遭罚6万元</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2023/09/id14068091-633804-600x400.jpg" />
 <h6>北市卫生局6日公布25件现切水果摊商产品抽验结果，其中，艋舺夜市“男哥现削水果”2度遭检出在水梨中添加糖精。（北市卫生局提供）
 </h6>
 <hr>
-<p>【大纪元2023年09月06日讯】（大纪元记者赖玟茹台湾台北报导）台<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8C%97%E5%B8%82%E5%8D%AB%E7%94%9F%E5%B1%80.md#1">北市卫生局</a>6日公布“112年市售即食截切水果抽验结果”，万华艋舺夜市的摊商“男哥现削水果”，其中的水梨品项，检出甜味剂“<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%B3%96%E7%B2%BE.md#1">糖精</a>”，经查该摊商为第2次违规，已《食安法》开罚新台币6万元罚锾。</p>
-<p>台<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E5%8C%97%E5%B8%82%E5%8D%AB%E7%94%9F%E5%B1%80.md#1">北市卫生局</a>到台北市夜市及日市进行“即食截切水果”摊贩进行抽验，共计抽验25件产品，检验甜味剂13项，检验结果1件不符规定，不合格率4%。</p>
-<p>食品药物管理科长陈怡婷说明，万华艋舺夜市的“男哥现削水果”摊商，检出1件“水梨”甜味剂<ahref="https://github.com/19920513/djy/blob/master/gb/tag/%E7%B3%96%E7%B2%BE.md#1">糖精</a>超标，依规定国内生鲜裁切水果，不得检出糖精，目前已依《食安法》第41条令贩售场所下架产品。</p>
+<p>【大纪元2023年09月06日讯】（大纪元记者赖玟茹台湾台北报导）台北市卫生局6日公布“112年市售即食截切水果抽验结果”，万华艋舺夜市的摊商“男哥现削水果”，其中的水梨品项，检出甜味剂“糖精”，经查该摊商为第2次违规，已《食安法》开罚新台币6万元罚锾。</p>
+<p>台北市卫生局到台北市夜市及日市进行“即食截切水果”摊贩进行抽验，共计抽验25件产品，检验甜味剂13项，检验结果1件不符规定，不合格率4%。</p>
+<p>食品药物管理科长陈怡婷说明，万华艋舺夜市的“男哥现削水果”摊商，检出1件“水梨”甜味剂糖精超标，依规定国内生鲜裁切水果，不得检出糖精，目前已依《食安法》第41条令贩售场所下架产品。</p>
 <p>陈怡婷表示，经查制造业者前因违反相同条，已在111年10月25日裁处在案，这次为第2次违反《食安法》第18条规定，依同法第47条第1项第9款及裁罚基准，处该业者新台币6万元罚锾。</p>
 <p>“糖精”为人工合成的甜味剂，甜度是一般蔗糖的300至400倍，人体无法分解代谢，可由尿中直接排出，但依据卫福部公告“食品添加物使用范围及限量暨规格标准”规定，“糖精”可使用于瓜子、蜜饯、梅粉及碳酸饮料等产品，但不得使用于生鲜截切水果。</p>
 <p>卫生局提醒，民众购买截切水果应检视贩售或陈列架卫生情形是否良好，有无蚊虫出没、脏污不洁情形，截切水果产品应有适当包覆或包装储存，此外，多数水果经分切后容易氧化褐变，业者为保持卖相可能进行浸泡处理，如民众购买时发现业者有浸泡不明液体或有卫生疑虑，切勿轻易购买，以免危害自己及家人健康。</p>
 <p>责任编辑：郑桦</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/12/1/2/n3474918.md#1">年货大抽查 蜜饯验出含大量糖精</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/12/9/24/n3690064.md#1">大陆现“糖精枣”青枣泡糖精水成“红枣”</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/3/13/n3821614.md#1">袁艾菲甜美娇俏　化身棉花糖精灵走秀</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/4/1/n3836513.md#1">夜市芭乐含糖精 多食恐伤肾</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/4/n14129426.md#1">台电台北北区营业处 爱物惜物暖暖祝福</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/3/n14128940.md#1">健保总额成长率4.7%上限 专家估2026年恐涨保费</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/3/n14128946.md#1">鸡蛋比菜便宜 蛋商鼓励消费者多支持国产蛋</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/3/n14128729.md#1">台北分署年终拍卖会 千件珠宝首饰高质感</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/2/n14128117.md#1">士林官邸“花艺仙境”20万盆菊花融入艺术设计</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125374.md#1">2023年台湾全球招商论坛 蔡英文：台湾是安全的投资地点</a></li>
-<hr>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/12/1/2/n3474918.md#1">年货大抽查 蜜饯验出含大量糖精</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/12/9/24/n3690064.md#1">大陆现“糖精枣”青枣泡糖精水成“红枣”</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/3/13/n3821614.md#1">袁艾菲甜美娇俏　化身棉花糖精灵走秀</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/13/4/1/n3836513.md#1">夜市芭乐含糖精 多食恐伤肾</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389027.md#1">五打七安 士林分署携手南湖高中建反诈网</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387596.md#1">中研院年轻学者研究成果奖 5学者获奖</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/8/n14386807.md#1">提升学前教育品质 教育部补助成立245教保社群</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386359.md#1">迎接超高龄社会 新光保全聚焦智慧医疗</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14384373.md#1">建商解散文山土地拍卖 4千余万元拍定</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14383851.md#1">央广董事长赖秀如接策进会董事长</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/18/1/22/n10077365.md#1" target="_blank">金剑：阶级斗争是民族毁灭的动力</a></li><li><a href="https://github.com/19920513/djy/blob/master/gb/15/9/12/n4526041.md#1" target="_blank">子华：谁是真正破坏社会安定的人</a></li>
+<li><a href="https://github.com/1992513/ntdtv/blob/master/gb/2020/07/20/a102898210.md#1" target="_blank">美国务卿：中共迫害法轮功21年 必须停止</a> </li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/10/31/n10821837.md#1" target="_blank">林辉：文革偷听“敌台”让一些中国人觉醒</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/13/11/6/n4003814.md#1" target="_blank">信师信法　一路前行（下）</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14127594.md#1">消息：美国中央情报局已回收至少9个UFO</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/24/n14123010.md#1">《神曲》插画，舍我其谁</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/30/n14127216.md#1">为何每个家庭皆应书香满屋酿人生</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/28/n14125441.md#1">【未解之谜】瘟疫绕道的两个村庄</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/21/n14120803.md#1">【古道人生】穷汉终身未婚 晚年却得子孙奉养</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/4/n14129837.md#1">【秦鹏观察】20万亿大雷要爆 中国信托行业危矣</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/2/n14128316.md#1">【时事金扫描】乌两炸俄中铁路 粉红援俄陷绝境</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/2/n14128658.md#1">【菁英论坛】金融海啸爆发 李强背锅陷雷区</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/2/n14128625.md#1">不可能任务？美军将两飞机拼成一架F-35A</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14127794.md#1">快抢货 当下Costco有两种商品卖得飞快</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/3/n14128717.md#1">被爆毒死李克强 武警上海总队司令陈源失踪？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/3/n14129078.md#1">吴宇森爆料：汤姆·克鲁斯的坚持与妥协</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/3/n14129100.md#1">似回应假唱质疑 五月天宣布直播巴黎演唱会</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/3/n14128829.md#1">张艾嘉娶媳婚礼星光熠熠 张清芳献唱《家后》</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/3/n14129051.md#1">向周星驰自荐演《少林女足》 谢依霖笑曝结果</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/3/n14128832.md#1">纪念保罗沃克逝世10年 女儿公开他笑开怀影片</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/1/n14127790.md#1">奇异果有6大功效 黄肉绿肉哪种更好？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/22/n14122156.md#1">苹果醋这样喝更有效 每天1勺降血糖 提升免疫力</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/9/11/n14071203.md#1">新陈代谢逐渐变慢 老人味愈来愈重了怎么办？</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/11/29/n14126153.md#1">新研究：柳树皮提取物可灭活新冠病毒及肠病毒</a></li>
-<li><a href="https://github.com/19920513/djy/blob/master/gb/23/12/3/n14128792.md#1">读书时如何对抗遗忘曲线以强化记忆？</a></li>
-<hr>
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/19920513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/6/n14068090.htm">现切水果检出“糖精” 艋舺夜市摊商遭罚6万元</a></p><hr>
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/19920513/djy/blob/master/gb/23/9/6/n14068090.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/19920513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/19920513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/19920513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/19920513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/7/n14386541.md#1">格鲁吉亚发现神秘石板 或蕴含失落语言</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387166.md#1">美国护士称见到2米高的死神逼近临终病人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/9/n14387684.md#1">【未解之谜】孙中山转世？河南奇人张四目之谜</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/22/3/13/n13642953.md#1">叹武训</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/6/n14386112.md#1">【未解之谜】用DNA谱曲？遗传学中隐藏生命密码</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389283.md#1">【军事情报局】阿萨德十天倒台 以军攻入叙利亚</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390708.md#1">【新闻大破解】美军反制 共军围岛不敢说演习</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/13/n14390112.md#1">【时事金扫描】以乌首次联合战役 俄要报复</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389267.md#1">传中共拟允许人民币大幅贬值 专家析利弊</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389628.md#1">海关署长俞建华猝死 其靠山被指是丁薛祥</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389618.md#1">【内幕】惧美国制裁 中共跨国镇压密令曝光</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389328.md#1">孙俪自曝13岁儿子用身体帮她挡车 网友大赞</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389389.md#1">高圆圆素颜带娃外出骑车 一细节获赞温馨有爱</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14388478.md#1">泰勒丝“时代”巡演落幕 工作人员奖金惊人</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14388542.md#1">《鱿鱼游戏2》破例 未播入围金球奖最佳剧集</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14390043.md#1">开跑车随手丢烟头 《庆余年》主演张若昀惹议</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/4/n14383980.md#1">吃米饭同样可控糖  比生酮饮食更永续更安全</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389408.md#1">为什么不该用微波炉泡茶？ 泡好茶三技巧</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/12/n14389513.md#1">开卷真的有益 擅长阅读者大脑结构不同</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/11/n14389057.md#1">用荷兰锅煮饭 停电也不担心 一锅到底营养更全面</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/24/12/10/n14387834.md#1">阑尾炎 便秘 腹泻？中医2招应对肚子痛</a></li>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/23/9/6/n14068090.htm">现切水果检出“糖精” 艋舺夜市摊商遭罚6万元</a></p><hr>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/23/9/6/n14068090.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
